Enhance login and signup pages with dark theme support and improved styling; add vendor button functionality belal ahmed

--- a/Views/Auth/SignUp.ejs
+++ b/Views/Auth/SignUp.ejs
@@ -73,7 +73,7 @@
     </div>
 </div>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/Footer') %>
 
 <script src="/JavaScript/signup.js"></script>
 <script src="/JavaScript/EmailValidation.js"></script>
