New image in about-us page

--- a/Views/About-us.ejs
+++ b/Views/About-us.ejs
@@ -37,7 +37,7 @@
           </ul>
         </div>
         <div class="mission-image">
-          <img src="https://via.placeholder.com/600x400/f0f0f0/666?text=MIU+Campus" alt="MIU Campus">
+          <img src="/Images/campus.jpg" alt="MIU Campus">
         </div>
       </div>
     </section>
