--- a/public/Styles/Login.css
+++ b/public/Styles/Login.css
@@ -90,7 +90,7 @@ body {
     flex-direction: column; 
     min-height: 100vh; 
     margin: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Images/LoginBackGround.jpeg");
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Images/LoginBackGround.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
