--- a/public/Styles/UniBite.css
+++ b/public/Styles/UniBite.css
@@ -9,7 +9,7 @@ html, body {
     font-size: 16px;
     font-family: 'Inter', sans-serif;
     background-color: #f8f9fa;
-    background-image: url('../Images/HeroBackV2.png');
+    background-image: url('../Images/HeroBackV2.webp');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -17,7 +17,7 @@ html, body {
 
 @media (max-width: 768px) {
     html, body {
-        background-image: url('../Images/MobileBack.jpg');
+        background-image: url('../Images/MobileBack.webp');
     }
 
     html {
