Implement Paymob payment integration with online payment option in checkout

--- a/Views/checkout.ejs
+++ b/Views/checkout.ejs
@@ -37,6 +37,14 @@
                         <p>Pay with cash when you pick up your order</p>
                     </div>
                 </div>
+                <div class="payment-option">
+                    <input type="radio" name="payment" id="card">
+                    <i class="fas fa-credit-card payment-icon"></i>
+                    <div>
+                        <h4>Pay Online</h4>
+                        <p>Secure card payment powered by Paymob</p>
+                    </div>
+                </div>
             </div>
 
             
@@ -67,4 +75,4 @@
 
     <script src="/JavaScript/checkout.js"></script>
 </body>
-</html> 
+</html>
