--- a/Views/order-confirmation.ejs
+++ b/Views/order-confirmation.ejs
@@ -14,5 +14,8 @@
         You will receive a notification when your order is ready for pickup.</p>
         <a href="/stores">Back to Stores</a>
     </div>
+    <script>
+        try { localStorage.removeItem('cartObj'); } catch (e) {}
+    </script>
 </body>
-</html> 
+</html>
