Add mobile wallet payment option and update payment method handling

--- a/Views/checkout.ejs
+++ b/Views/checkout.ejs
@@ -45,6 +45,14 @@
                         <p>Secure card payment powered by Paymob</p>
                     </div>
                 </div>
+                <div class="payment-option">
+                    <input type="radio" name="payment" id="wallet">
+                    <i class="fas fa-mobile-alt payment-icon"></i>
+                    <div>
+                        <h4>Mobile Wallet</h4>
+                        <p>Pay using your mobile wallet at pickup (no online charge)</p>
+                    </div>
+                </div>
             </div>
 
             
