Add service fee calculation and update order submission with payment method

--- a/Views/checkout.ejs
+++ b/Views/checkout.ejs
@@ -62,6 +62,10 @@
                 <span id="subtotal">0 EGP</span>
             </div>
             <div class="summary-item">
+                <span>Service Fee</span>
+                <span id="service-fee">0 EGP</span>
+            </div>
+            <div class="summary-item">
                 <span>Pickup Fee</span>
                 <span>Free</span>
             </div>
