Implement shared email validation for MIU domain across login and signup processes

--- a/Views/Auth/Login.ejs
+++ b/Views/Auth/Login.ejs
@@ -66,6 +66,7 @@
         alert('Google login functionality will be implemented soon!');
     }
 </script>
+<script src="/JavaScript/EmailValidation.js"></script>
 <script src="/JavaScript/auth.js"></script>
 </body>
 </html>
